Update to Webpack 4 and Babel 7

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
 	"presets": [
-		["es2015"]
+		["@babel/preset-env"]
 	],
 	"plugins": [
-		"add-module-exports"
+		"babel-plugin-add-module-exports",
 	]
 }
