--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lint": "./node_modules/.bin/eslint -c .eslintrc.js src; exit 0",
     "start": "./node_modules/.bin/webpack-dev-server --inline --d",
     "build": "./node_modules/.bin/webpack --progress",
-    "minify": "NODE_ENV=production npm run build",
-    "legacy": "NODE_ENV=production LEGACY=true npm run build",
+    "minify": "cross-env NODE_ENV=production && npm run build",
+    "legacy": "cross-env NODE_ENV=production && cross-env LEGACY=true && npm run build",
     "compile": "./node_modules/.bin/babel --optional runtime -d lib/ src/",
     "watch": "./node_modules/.bin/babel --watch --optional runtime -d lib/ src/",
     "serve": "./node_modules/.bin/gulp serve",
@@ -36,6 +36,7 @@
     "babili-webpack-plugin": "0.1.2",
     "colors": "^1.3.0",
     "connect": "^3.6.6",
+    "cross-env": "^5.2.0",
     "documentation": "^5.5.0",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
